--- a/vlo-sitemap/pom.xml
+++ b/vlo-sitemap/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.clarin.vlo</groupId>
 	<artifactId>vlo-sitemap</artifactId>
-	<version>4.3-SNAPSHOT</version>
+	<version>6.5</version>
 	<name>VLO Sitemap Generator</name>
     
         <parent>
             <groupId>eu.clarin.cmdi</groupId>
             <artifactId>vlo</artifactId>
-            <version>4.3-SNAPSHOT</version>
+            <version>6.5</version>
         </parent>
     
 	<properties>
